responsive page postNews

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -222,6 +222,6 @@
 \************************************/
 
 .header-news
-  background: #5f2c82
-  background: -webkit-linear-gradient(to left, #49a09d, #5f2c82)
-  background: linear-gradient(to left, #49a09d, #5f2c82)
+  background: #485563
+  background: -webkit-linear-gradient(to bottom, #29323c, #485563)
+  background: linear-gradient(to bottom, #29323c, #485563) /*Color by Loulou*/
