responsive page contact

--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -88,6 +88,7 @@
   letter-spacing 1.63px
   text-transform: uppercase
   margin-bottom s(30, $sz6)
+  line-height: 1.2em
   &:after
     content ''
     display: block
@@ -102,6 +103,7 @@
   letter-spacing 1.63px
   text-transform: uppercase
   margin-bottom s(30, $sz5)
+  line-height: 1.2em
   &:after
     content ''
     display: block
@@ -116,6 +118,7 @@
   letter-spacing 1.63px
   text-transform: uppercase
   margin-bottom s(30, $sz5)
+  line-height: 1.2em
   &:after
     content ''
     display: block
