--- a/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
@@ -279,3 +279,71 @@
     height s(345)
     & .reas__img
       height s(345)
+
+
+/************************************\
+		RESPONSIVE
+\************************************/
+@media screen and (max-width: 1330px)
+  .reas-wrapper
+  .reas
+    width: s(940)
+    margin 0 auto
+    &__item
+      width s(300)
+
+@media screen and (max-width: 1014px)
+  .reas-wrapper
+  .reas
+    width: s(862)
+    margin 0 auto
+    &__item
+      width s(420)
+
+@media screen and (max-width: 934px)
+  .reas-wrapper
+  .reas
+    width: s(663)
+    margin 0 auto
+    &__item
+      width s(320)
+      &:nth-child(2n+2)
+        margin-right 0
+
+@media screen and (max-width: 768px)
+  .reas-wrapper
+  .reas
+    width: 100%
+    margin 0 auto
+    &__item
+      width 100%
+      height 531px
+      &:nth-child(2n+2)
+        margin-right 0
+      &:nth-child(11n+1)
+      &:nth-child(11n+2)
+      &:nth-child(11n+3)
+      &:nth-child(11n+4)
+      &:nth-child(11n+5)
+      &:nth-child(11n+6)
+      &:nth-child(11n+7)
+      &:nth-child(11n+8)
+      &:nth-child(11n+9)
+      &:nth-child(11n+10)
+      &:nth-child(11n+11)
+        height 531px
+        & .reas__img
+          height 531px
+  .index-rea__filter
+    &__item
+      display: block
+      margin-bottom s(15)
+      &:after
+      &:before
+        display: none
+    &__link
+      &:after
+      &:before
+        display: none
+    &__item.active
+      border 2px solid $cBlueCiel
