responsive page graduated and js

--- a/ecoleinfographie/resources/assets/stylus/components/graduate.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/graduate.styl
@@ -115,3 +115,26 @@
       display: none
     .select-submit
       position static
+
+
+/************************************\
+		RESPONSIVE
+\************************************/
+@media screen and (max-width: 750px)
+  .graduateList
+    padding s(0) s(20)
+    .former-students__list
+      width 100%
+    .former-students
+      &__item
+        float none
+        width: 100%
+        margin-right 0
+    .card_student
+      width 100%
+    .card_student__picture-wrapper
+      height auto
+    .card_student__picture
+      position static
+      width: 100%
+
