--- a/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
@@ -244,3 +244,49 @@
   letter-spacing .4px
   font-weight: 700
 
+
+@media screen and (max-width 1024px)
+  .postBlog
+    .comments
+      &__header
+      &__container
+        width: 100%
+    .postComment__section
+      width: 100%
+      max-width none
+
+
+@media screen and (max-width 650px)
+  .postBlog
+    .comments
+      &__share
+      &__count
+        display: block
+        float: none
+      &__count
+        margin-bottom s(25)
+
+@media screen and (max-width 650px)
+  .postBlog
+    .comments
+      margin-top: s(120)
+      padding-top s(60)
+      &__container
+        padding-bottom s(100)
+    .postComment__wrapper
+      width: 100%
+      &--1
+        margin-bottom s(20)
+    .postComment__title
+      line-height: 1.2em
+    .postComment__submit
+      width: 100%
+      padding s(25) 0
+
+@media screen and (max-width 650px)
+  .postBlog
+    .comment__img
+      display: none
+    .comment__text
+      max-width 100%
+      margin 0
