responsive internship offer

--- a/ecoleinfographie/resources/assets/stylus/components/_form.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_form.styl
@@ -218,3 +218,12 @@
     top: -31px
     right 0
 
+@media screen and (max-width 736px)
+  .internship
+    .form__checkbox-btn
+      float none
+      width 100%
+      margin-bottom s(15)
+    .form__submit
+      padding s(25) s(15)
+      width auto
