add microdatas to page contact

--- a/ecoleinfographie/resources/assets/stylus/components/index_contact.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_contact.styl
@@ -123,9 +123,12 @@
     &__address
     &__link
     &__timetable
+    & span
       display: inline-block
       color $cWhite
       font-size s($sz8)
+    &__address span
+      font-size inherit
     &__item
       position: relative
       margin-bottom s(40)
